# jurymind-ai

./: .gitignore  .readthedocs.yaml  README.md  main.py  mkdocs.yml  mlflow_logs.txt  prompt_optimization_example.py  pydantic_client.py  pyproject.toml  small_data.json  spoiler_dataset.json  weather.py
docs/: CNAME  Examples.md  api.md  core.md  index.md  jurymind.md  mkdocs.yml  requirements.txt
jurymind/agents/: base.py  models.py
jurymind/core/: models.py
jurymind/core/agents/: base.py
jurymind/core/masks/: base.py
jurymind/core/optimization/: __init__.py  base.py
jurymind/core/prompts/: __init__.py  base.py  optimize.py
jurymind/core/prompts/optimize/: __init__.py  base.py
jurymind/eval/: base.py
jurymind/evaluation/mlflow/: base.py
jurymind/llm/: base.py
jurymind/llm/openai/: __init__.py  base.py
mlruns/0/: meta.yaml
mlruns/0/traces/1bcf1d67945549538f96008fa571c370/: trace_info.yaml
mlruns/0/traces/2687e6d9a57b47d1933e9343592614ce/: trace_info.yaml
mlruns/0/traces/2b75ef9117b348de88b5c692511103f8/: trace_info.yaml
mlruns/0/traces/2ba5d8bafb1945e28c6525c51962b3a1/: trace_info.yaml
mlruns/0/traces/2f1de43b3a984ea79d557f5ac4ca835d/: trace_info.yaml
mlruns/0/traces/33cb53dd3d994c68bbeec1440332abf9/: trace_info.yaml
mlruns/0/traces/3b035be6cb03464cb518aff51aa79c3a/: trace_info.yaml
mlruns/0/traces/3da7ce44c5444fa7ab18ef2499331457/: trace_info.yaml
mlruns/219891953568257541/: meta.yaml
src/jurymind/distill/: __init__.py
src/jurymind/eval/: base.py  llm_evaluator.py
src/jurymind/llm/: base.py
src/jurymind/prompt/: base.py
(+194 files in other folders)
