[project]
name = "jurymind-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "numpy>=2.3.1",
    "openai>=1.91.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
