[project]
name = "jurymind-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.12.2",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mlflow>=3.1.4",
    "numpy>=2.3.1",
    "openai>=1.91.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.3.5",
    "pydantic-graph>=0.4.10",
    "requests>=2.32.4",
]
